# ai_cursor_test

./: .gitignore
ai-financial-tool/: pyproject.toml  requirements.txt
ai-financial-tool/core/api_client/: __init__.py  api_client.py
ai-financial-tool/core/config/: __init__.py  config.py
ai-financial-tool/core/mongodb_client/: __init__.py
ai-financial-tool/core/pythonsdk_20220616/demo/: userinfo.py
ai-financial-tool/services/聊天/工具执行时间统计/: 工具执行时间统计.py  工具执行时间统计.xlsx  工具执行时间统计_20260228_154930.xlsx
ai-financial-tool/services/聊天/策略构建/: 策略构建批量提问.py  策略构建批量结果.xlsx  策略构建批量结果0828.xlsx  策略构建批量结果0905.xlsx  策略构建批量结果0906.xlsx  策略构建批量结果0912.xlsx  策略构建批量结果0915.xlsx  策略构建批量结果0917.xlsx  策略构建批量结果0919.xlsx  策略构建批量结果0919_1.xlsx  策略构建批量结果0922.xlsx  策略构建批量结果0926.xlsx  策略构建批量结果0926_new.xlsx  策略构建测试问题集合.csv  策略构建测试问题集合.xlsx  策略构建测试问题集合组合.csv  策略构建问题.xlsx  策略构建问题_NEW.xlsx
testing-framework/: .gitignore  README.md
testing-framework/01-需求文档/: 情绪需求.txt
testing-framework/02-测试点/: 三角形-测试点.md
testing-framework/03-测试用例/: 三角形判定-测试用例.md
testing-framework/04-导出XMind/: 三角形-测试点.mm  三角形-测试点_xmind_outline.txt  三角形判定-测试用例.mm  三角形判定-测试用例_xmind_outline.txt  使用说明.md
testing-framework/backend/: .env.example  .gitignore  package-lock.json  package.json
testing-framework/backend/prisma/: schema.prisma
testing-framework/frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
testing-framework/tools/: export_testpoints_to_xmind.py  export_to_xmind.py  outline_to_freemind.py  requirements.txt
testing-framework/模板/: 测试点模板.md  测试用例模板.md  需求文档模板.md
(+33 files in other folders)
